feat: improve access token refresh flow

--- a/app/locales/cs.json
+++ b/app/locales/cs.json
@@ -911,6 +911,7 @@
     "verifying": "Ověřuji",
     "cancel": "Zrušit",
     "boostHint": "Boostování je pouze pro členy.",
+    "sessionExpiredHint": "Platnost relace vypršela. Přihlaste se znovu.",
     "termsPrefix": "Pokračováním souhlasíte s ",
     "termsLink": "podmínkami a zpracováním osobních údajů",
     "termsSuffix": ".",
